--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
-*.java linguist-detectable=true
+*.python linguist-detectable=true
 *.html linguist-detectable=false
 *.xml linguist-detectable=false
+*.java linguist-detectable=false
